--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -8,8 +8,11 @@
         <div>
             <select name="postType" id="postType">
                 <option value="">게시판 선택</option>
-                <option value="NOTICE">공지사항</option>
+<!--                <option value="NOTICE">공지사항</option>-->
                 <option value="FREE">자유게시판</option>
+                <option value="BOARD1">게시판1</option>
+                <option value="BOARD2">게시판2</option>
+                <option value="BOARD3">게시판3</option>
             </select>
         </div>
         <label for="content">제목</label>
