--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,8 +15,8 @@
                            th:text="${postType.title}"
                            th:value="${postType.key}"
                            th:href="@{/(postType= ${postType.key}
-                                , searchKeyword = ${param.searchKeyword}
-                                , searchType = ${param.searchType})}"></a>
+                                , searchType = ${param.searchType}
+                                , searchKeyword = ${param.searchKeyword})}"></a>
                     </li>
                 </th:block>
             </ul>
@@ -68,36 +68,53 @@
         <ul class="pagination justify-content-center">
             <!-- 첫번째 페이지로 이동 -->
             <li class="page-item">
-                <a class="page-link" th:href="${posts.first} ? '#' : @{/(page=0)}" aria-label="Previous">
+                <a class="page-link" th:href="${posts.first} ? '#' : @{/(
+                   postType = ${param.postType}
+                   , searchType = ${param.searchType}
+                   , searchKeyword = ${param.searchKeyword}
+                   , page=0)}" aria-label="Previous">
                     <span aria-hidden="true">처음</span>
                 </a>
             </li>
             <!-- 이전 링크 활성화 비활성화 -->
             <li class="page-item">
-                <a class="page-link" th:href="${posts.first} ? '#' : @{/(page=${posts.number - 1})}" aria-label="Previous">
+                <a class="page-link" th:href="${posts.first} ? '#' : @{/(
+                   postType = ${param.postType}
+                   , searchType = ${param.searchType}
+                   , searchKeyword = ${param.searchKeyword}
+                   , page=${posts.number - 1})}" aria-label="Previous">
                     <span aria-hidden="true">이전</span>
                 </a>
             </li>
             <th:block th:each="page: ${#numbers.sequence(startPage, endPage)}">
                 <a class="page-link"
                    th:if="${page != nowPage}"
-                   th:href="@{/(page = ${page - 1}
+                   th:href="@{/(
+                   postType = ${param.postType}
+                   , searchType = ${param.searchType}
                    , searchKeyword = ${param.searchKeyword}
-                   , postType = ${param.postType}
-                   , searchType = ${param.searchType})}"
+                   , page = ${page - 1})}"
                    th:text="${page}">
                 </a>
                 <strong class="page-link" th:if="${page == nowPage}" th:text="${page}"></strong>
             </th:block>
             <!-- 다음 링크 활성화 비활성화 -->
             <li class="page-item">
-                <a class="page-link" th:href="${posts.last} ? '#' : @{/(page=${posts.number + 1})}" aria-label="Next">
+                <a class="page-link" th:href="${posts.last} ? '#' : @{/(
+                   postType = ${param.postType}
+                   , searchType = ${param.searchType}
+                   , searchKeyword = ${param.searchKeyword}
+                   , page=${posts.number + 1})}" aria-label="Next">
                     <span aria-hidden="true">다음</span>
                 </a>
             </li>
             <!-- 마지막 페이지로 이동 -->
             <li class="page-item">
-                <a class="page-link" th:href="${posts.last} ? '#' : @{/(page=${posts.totalPages - 1})}" aria-label="Previous">
+                <a class="page-link" th:href="${posts.last} ? '#' : @{/(
+                   postType = ${param.postType}
+                   , searchType = ${param.searchType}
+                   , searchKeyword = ${param.searchKeyword}
+                   , page=${posts.totalPages - 1})}" aria-label="Previous">
                     <span aria-hidden="true">끝</span>
                 </a>
             </li>
