--- a/src/main/resources/templates/user-update.html
+++ b/src/main/resources/templates/user-update.html
@@ -23,53 +23,57 @@
 
 <body class="bg-gradient-primary">
 
-    <div class="container">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-xl-8 col-lg-12 col-md-9">
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <!--                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>-->
+                        <div class="col-lg-12">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">회원정보 수정</h1>
+                                </div>
+                                <form class="user">
+                                    <input type="hidden" id="id" th:value="${sessionUserDto.id}"/>
+                                    <input type="hidden" id="modifiedDate" th:value="${sessionUserDto.modifiedDate}"/>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">계정</span>
+                                        <input type="email" class="form-control form-control-user" id="email"
+                                               th:value="${sessionUserDto.email}" name="email" readonly>
+                                    </div>
+                                    <div class="form-group">
+                                        <span class="m-0 font-weight-bold text-primary">닉네임</span>
+                                        <input type="text" class="form-control form-control-user" id="name"
+                                               th:value="${sessionUserDto.name}" name="name" placeholder="닉네임을 입력하세요.">
+<!--                                        <span class="m-0 font-weight-bold text-danger" th:if="${valid_name != null}" th:text="${valid_name}"></span>-->
 
-        <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-                <!-- Nested Row within Card Body -->
-                <div class="row">
-<!--                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>-->
-                    <div class="col-lg-12">
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">회원정보 수정</h1>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-sm-6 mb-3 mb-sm-0">
+                                            <span class="m-0 font-weight-bold text-primary">변경할 비밀번호</span>
+                                            <input type="password" class="form-control form-control-user"}
+                                                   name="password" id="password" placeholder="비밀번호">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <span class="m-0 font-weight-bold text-primary">비밀번호 확인</span>
+                                            <input type="password" class="form-control form-control-user"}
+                                                   name="passwordConfirm" id="passwordConfirm" placeholder="비밀번호 확인">
+                                        </div>
+                                    </div>
+                                    <button id="btn-modify" type="button" class="btn btn-primary btn-user btn-block">
+                                        수정하기
+                                    </button>
+                                </form>
                             </div>
-                            <form class="user">
-                                <input type="hidden" id="id" th:value="${sessionUserDto.id}"/>
-                                <input type="hidden" id="modifiedDate" th:value="${sessionUserDto.modifiedDate}"/>
-                                <div class="form-group">
-                                    <span class="m-0 font-weight-bold text-primary">계정</span>
-                                    <input type="email" class="form-control form-control-user" id="email"
-                                           th:value="${sessionUserDto.email}" name="email" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <span class="m-0 font-weight-bold text-primary">닉네임</span>
-                                    <input type="text" class="form-control form-control-user" id="name"
-                                           th:value="${sessionUserDto.name}" name="name" placeholder="닉네임을 입력하세요.">
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <span class="m-0 font-weight-bold text-primary">변경할 비밀번호</span>
-                                        <input type="password" class="form-control form-control-user"}
-                                               name="password" id="password" placeholder="비밀번호">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <span class="m-0 font-weight-bold text-primary">비밀번호 확인</span>
-                                        <input type="password" class="form-control form-control-user"}
-                                               name="passwordConfirm" id="passwordConfirm" placeholder="비밀번호 확인">
-                                    </div>
-                                </div>
-                                <button id="btn-modify" type="button" class="btn btn-primary btn-user btn-block">
-                                    수정하기
-                                </button>
-                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
+</div>
 
 <th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
