--- a/src/main/resources/templates/posts-read.html
+++ b/src/main/resources/templates/posts-read.html
@@ -52,7 +52,7 @@
         <div class="text-center">
             <button type="button"
                     th:if="${user != null}"
-                    th:onclick="'main.postRecommend(' + ${recommend.recommend} + ',' + ${user.id} + ')'"
+                    th:onclick="'main.postRecommend(' + ${user.id} + ')'"
                     class="badge bi bi-x-square">추천
             </button>
             <button type="button"
@@ -64,7 +64,7 @@
             <span id="recommendDownCount" th:text="${post.recommendDown}"></span>
             <button type="button"
                     th:if="${user != null}"
-                    th:onclick="'main.postDisRecommend(' + ${recommend.recommend} + ',' + ${user.id} + ')'"
+                    th:onclick="'main.postDisRecommend('+ ${user.id} + ')'"
             class="badge bi bi-x-square">비추천
             </button>
             <button type="button"
