--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -15,21 +15,36 @@
                 <option value="BOARD3">게시판3</option>
             </select>
         </div>
-        <label for="content">제목</label>
+        <label>제목</label>
             <div style="display: flex;" class="form-group">
                 <input style="width: 80%" type="text" class="form-control" id="title" placeholder="제목을 입력하세요" th:value="${title}">
                 <input style="width: 20%; margin-left: 10px;" type="text" class="form-control" id="author" th:value="${user.getName()}" readonly>
             </div>
-        <label for="content">내용</label>
+        <label>내용</label>
             <div class="form-group">
-                <textarea class="form-control h-75" id="content" placeholder="내용을 입력하세요" th:text="${content}"></textarea>
+                <textarea id="content"></textarea>
             </div>
         <div class="form-floating mb-3">
-            <label>이미지 업로드</label>
+            <label>이미지 업로드</label><br/>
+            <label>파일 최대 용량 : 10MB</label>
             <input type="file" name="files" accept="image/*,.txt" class="form-control" id="files" multiple>
             <img id="preview">
         </div>
     </form>
+    <script>
+        var editor;
+        ClassicEditor.create(document.querySelector('#content'), {
+            language: "ko",
+            ckfinder: {
+                uploadUrl: "/api/image/upload",
+                withCredentials: true
+            }
+        }).then(editor => {
+            window.editor = editor;
+        }).catch(error => {
+                console.error(error);
+        });
+    </script>
     <div class="text-right">
         <a href="/" role="button" class="btn btn-secondary">취소</a>
         <button type="button" class="btn btn-primary" id="btn-save">등록</button>
