--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,6 +15,13 @@
 
         <!-- Custom styles for this template-->
         <link href="/css/sb-admin-2.min.css" rel="stylesheet">
+
+        <script src="/js/ckeditor/build/ckeditor.js"></script>
+        <style>
+          .ck-editor__editable {
+            min-height: 400px;
+          }
+        </style>
     </head>
     <body>
     <br/>
