--- a/src/main/resources/templates/posts-read.html
+++ b/src/main/resources/templates/posts-read.html
@@ -41,7 +41,7 @@
         </div>
         <div class="form-group">
 <!--            <label for="content">내용</label>-->
-            <div id="content" th:text="${post.content}"></div>
+            <div id="content" th:utext="${post.content}"></div>
             <th:block th:each="image : ${postsImages}">
                 <img width="500" th:src="'/files/' + ${image.url}"/>
             </th:block>
