--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -29,17 +29,31 @@
             </th:block>
         </div>
         <div class="form-floating mb-3">
-            <label>이미지 업로드</label>
+            <label>이미지 업로드</label><br/>
+            <label>파일 최대 용량 : 10MB</label>
             <input type="file" name="files" accept="image/*,.txt" class="form-control" id="files" multiple>
             <span>삭제하고 싶은 이미지를 선택하세요.</span>
             <th:block th:each="image : ${postsImages}">
                 <div th:text="${image.name}"/>
                 <input type="checkbox" class="image-checkbox" th:id="'checkbox_' + ${image.id}" />
                 <img width="100" th:src="'/files/' + ${image.url}" class="image" />
-<!--                    <button th:onclick="'main.imageDelete(' + ${image.postId} + ',' + ${image.id} + ')'" class="badge bi bi-x-square">삭제</button>-->
             </th:block>
         </div>
     </form>
+    <script>
+        var editor;
+        ClassicEditor.create(document.querySelector('#content'), {
+            language: "ko",
+            ckfinder: {
+                uploadUrl: "/image/upload",
+                withCredentials: true
+            }
+        }).then(editor => {
+            window.editor = editor;
+        }).catch(error => {
+            console.error(error);
+        });
+    </script>
     <div class="text-right">
         <a href="/" role="button" class="btn btn-secondary">목록으로</a>
         <button type="button" class="btn btn-primary" id="btn-update">수정완료</button>
