--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,10 +17,18 @@
         <link href="/css/sb-admin-2.min.css" rel="stylesheet">
 
         <script src="/js/ckeditor/build/ckeditor.js"></script>
+
+<!--        <script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>-->
+<!--        <script src="https://ckeditor.com/apps/ckfinder/3.5.0/ckfinder.js"></script>-->
+
         <style>
-          .ck-editor__editable {
-            min-height: 400px;
-          }
+            .ck-editor__editable {
+                min-height: 400px;
+            }
+            #content figure.image img {
+                max-width: 100%;
+                height: auto;
+            }
         </style>
     </head>
     <body>
