--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -22,7 +22,7 @@
             </div>
         <label>내용</label>
             <div class="form-group">
-                <textarea id="content"></textarea>
+                <textarea id="content" th:value="${content}"></textarea>
             </div>
         <div class="form-floating mb-3">
             <label>이미지 업로드</label><br/>
