--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -45,7 +45,7 @@
         ClassicEditor.create(document.querySelector('#content'), {
             language: "ko",
             ckfinder: {
-                uploadUrl: "/image/upload",
+                uploadUrl: "/api/image/upload",
                 withCredentials: true
             }
         }).then(editor => {
