20240413 querydsl 적용중 동적 쿼리 작성중 postType과 검색 타입, 검색 키워드 적용 페이징 리팩토링, 내 게시글 보기 구현예정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,13 +8,13 @@
                 <li class="nav-item">
                     <a class="nav-link" th:classappend="${postTypeString == '' || postTypeString == null} ? 'active' : ''" th:text="'전체'" th:href="@{'/'}"></a>
                 </li>
-                <th:block th:each="postType : ${postTypes}" >
+                <th:block th:each="postType : ${postTypes}">
                     <li class="nav-item">
                         <a class="nav-link"
                            th:classappend="${postType.key == postTypeString} ? 'active' : ''"
                            th:text="${postType.title}"
-                           th:value="${postType.key}"
-                           th:href="@{/(postType= ${postType.key}
+                           th:value="${postType}"
+                           th:href="@{/(postType= ${postType}
                                 , searchType = ${param.searchType}
                                 , searchKeyword = ${param.searchKeyword})}"></a>
                     </li>
