--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -43,6 +43,8 @@
                     <div th:if="${user}">
                         <span id="user" th:text="${user.getName()}"></span> 님 안녕하세요!
                         <a href="/logout" class="btn btn-outline-primary active" role="button">로그아웃</a>
+                        <a th:href="@{/(myPost = ${1})}"
+                           class="btn btn-outline-primary active" role="button">내 게시글</a>
                         <a th:unless="${#strings.equals(user.role, 'OAUTH_USER')}"
                            href="/update" class="btn btn-outline-primary active">수정</a>
                     </div>
