--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,63 +65,78 @@
 
     <!--페이지네이션-->
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            <!-- 첫번째 페이지로 이동 -->
-            <li class="page-item">
-                <a class="page-link" th:href="${posts.first} ? '#' : @{/(
+        <div th:if="${!posts.isEmpty()}">
+            <ul class="pagination justify-content-center"
+                th:with="
+            pageNumber = ${posts.pageable.pageNumber},
+            nowPage = ${pageNumber + 1},
+            pageSize = ${posts.pageable.pageSize},
+            totalPages = ${posts.totalPages},
+            startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},
+            tempEndPage = ${startPage + pageSize - 1},
+            endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})">
+                <!-- 첫번째 페이지로 이동 -->
+                <li class="page-item">
+                    <a class="page-link" th:href="${posts.first} ? '#' : @{/(
                    postType = ${param.postType}
                    , searchType = ${param.searchType}
                    , searchKeyword = ${param.searchKeyword}
+                   , myPost = ${param.myPost}
                    , page=0)}" aria-label="Previous">
-                    <span aria-hidden="true">처음</span>
-                </a>
-            </li>
-            <!-- 이전 링크 활성화 비활성화 -->
-            <li class="page-item">
-                <a class="page-link" th:href="${posts.first} ? '#' : @{/(
+                        <span aria-hidden="true">처음</span>
+                    </a>
+                </li>
+                <!-- 이전 링크 활성화 비활성화 -->
+                <li class="page-item">
+                    <a class="page-link" th:href="${posts.first} ? '#' : @{/(
                    postType = ${param.postType}
                    , searchType = ${param.searchType}
                    , searchKeyword = ${param.searchKeyword}
+                   , myPost = ${param.myPost}
                    , page=${posts.number - 1})}" aria-label="Previous">
-                    <span aria-hidden="true">이전</span>
-                </a>
-            </li>
-            <th:block th:each="page: ${#numbers.sequence(startPage, endPage)}">
-                <a class="page-link"
-                   th:if="${page != nowPage}"
-                   th:href="@{/(
+                        <span aria-hidden="true">이전</span>
+                    </a>
+                </li>
+                <th:block th:each="page: ${#numbers.sequence(startPage, endPage)}">
+                    <a class="page-link"
+                       th:if="${page != nowPage}"
+                       th:href="@{/(
                    postType = ${param.postType}
                    , searchType = ${param.searchType}
                    , searchKeyword = ${param.searchKeyword}
+                   , myPost = ${param.myPost}
                    , page = ${page - 1})}"
-                   th:text="${page}">
-                </a>
-                <strong class="page-link" th:if="${page == nowPage}" th:text="${page}"></strong>
-            </th:block>
-            <!-- 다음 링크 활성화 비활성화 -->
-            <li class="page-item">
-                <a class="page-link" th:href="${posts.last} ? '#' : @{/(
+                       th:text="${page}">
+                    </a>
+                    <strong class="page-link" th:if="${page == nowPage}" th:text="${page}"></strong>
+                </th:block>
+                <!-- 다음 링크 활성화 비활성화 -->
+                <li class="page-item">
+                    <a class="page-link" th:href="${posts.last} ? '#' : @{/(
                    postType = ${param.postType}
                    , searchType = ${param.searchType}
                    , searchKeyword = ${param.searchKeyword}
+                   , myPost = ${param.myPost}
                    , page=${posts.number + 1})}" aria-label="Next">
-                    <span aria-hidden="true">다음</span>
-                </a>
-            </li>
-            <!-- 마지막 페이지로 이동 -->
-            <li class="page-item">
-                <a class="page-link" th:href="${posts.last} ? '#' : @{/(
+                        <span aria-hidden="true">다음</span>
+                    </a>
+                </li>
+                <!-- 마지막 페이지로 이동 -->
+                <li class="page-item">
+                    <a class="page-link" th:href="${posts.last} ? '#' : @{/(
                    postType = ${param.postType}
                    , searchType = ${param.searchType}
                    , searchKeyword = ${param.searchKeyword}
                    , page=${posts.totalPages - 1})}" aria-label="Previous">
-                    <span aria-hidden="true">끝</span>
-                </a>
-            </li>
-        </ul>
-        <a href="/posts/save" role="button"
-           class="btn btn-primary float-right">글 등록</a>
+                        <span aria-hidden="true">끝</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+            <a href="/posts/save" role="button"
+               class="btn btn-primary float-right">글 등록</a>
     </nav>
+
 
 </div>
 
